--- a/complex.html
+++ b/complex.html
@@ -12,7 +12,8 @@
 <p id="liff-message"></p>
 <span id="area"></span>
 
-<div class="now-open">現在営業中</div>
+<div class="now-open">営業中</div>
+<div class="now-close">営業時間外</div>
 <div class="place-status">混雑状況：<span class="non">現在スタッフによる入力なし</span></div>
 <div class="place-status">混雑状況：<span class="status-0">ほぼ利用者は居ません</span></div>
 <div class="place-status">混雑状況：<span class="status-1">比較的空いています</span></div>
