--- a/scan.html
+++ b/scan.html
@@ -1,78 +1,47 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Cache-Control" content="no-cache">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIFFテスト</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container mt-2">
-        <h1>LIFFのテスト中！！</h1>
-        <p><span id="name"></span>さんこんにちは！！</p>
-        <input type="button" value="このページを再読込します" onclick="location.reload()" />
-    </div>
-    <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-    <script>
-        const name = '名前が不明です';
-        const liffId = 'LIFFのIDです。'
-        liff.init({
-            liffId: liffId, // Use own liffId
-            withLoginOnExternalBrowser: true, // Enable automatic login process
-        }).then(() => {
-            getProfile()
-        }).catch((err) => {
-            alert(err)
-        })
+<template>
+  <div class="qrReader">
+    <qrcode-reader :paused="paused" @init="onInit" @decode="onDecode"></qrcode-reader>
+  </div>
+</template>
 
-        function getProfile(){
-            liff.getProfile()
-            .then((profile) => {
-                const name = profile.displayName
-                const displayName = document.getElementById('name')
-                displayName.innerHTML= name
-            })
-            .catch((err) => {
-                alert(err)
-            });
+<script>
+  import { QrcodeReader } from 'vue-qrcode-reader'
+  export default {
+    components: { QrcodeReader },
+    name: "qrReader",
+    data () {
+      return {
+        paused: false
+      }
+    },
+    methods: {
+      async onInit (promise) {
+        // show loading indicator
+        try {
+          await promise
+          // successfully initialized
+        } catch (error) {
+          if (error.name === 'NotAllowedError') {
+            // user denied camera access permisson
+          } else if (error.name === 'NotFoundError') {
+            // no suitable camera device installed
+          } else if (error.name === 'NotSupportedError') {
+            // page is not served over HTTPS (or localhost)
+          } else if (error.name === 'NotReadableError') {
+            // maybe camera is already in use
+          } else if (error.name === 'OverconstrainedError') {
+            // passed constraints don't match any camera. Did you requested the front camera although there is none?
+          } else {
+            // browser is probably lacking features (WebRTC, Canvas)
+          }
+        } finally {
+          // hide loading indicator
         }
-
-        function sendMessage(message){
-            liff
-            .sendMessages([
-                {
-                type: "text",
-                text: message,
-                },
-            ])
-            .then(() => {
-                alert("message sent");
-            })
-            .catch((err) => {
-                alert(err);
-            });
-        }
-
-        function scanCode(){
-            liff
-            .scanCodeV2()
-            .then((result) => {
-                alert(result)
-            })
-            .catch((err) => {
-                alert(err);
-            });
-        }
-        function friendshipFlag(){
-            liff.getFriendship().then((data) => {
-                alert(data.friendFlag)
-            })
-            .catch((err) => {
-                alert(err);
-            });
-        }
-    </script>
-</body>
-</html>
+      },
+      onDecode(content){
+        this.paused = true
+        alert(content)
+      }
+    }
+  }
+</script>
