--- a/scan.html
+++ b/scan.html
@@ -3,7 +3,8 @@
     <qrcode-reader :paused="paused" @init="onInit" @decode="onDecode"></qrcode-reader>
   </div>
 </template>
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-qrcode-reader@2.0.3/dist/vue-qrcode-reader.css"> 
+<script src="https://cdn.jsdelivr.net/npm/vue-qrcode-reader@2.0.3/dist/vue-qrcode-reader.browser.js"></script>
 <script>
   import { QrcodeReader } from 'vue-qrcode-reader'
   export default {
