--- a/scan.html
+++ b/scan.html
@@ -62,6 +62,7 @@ $(document).ready(function () {
       console.log('LIFF Initialization failed ', err);
     });
     
+    pElement.innerHTML=''
     
     liff.scanCodeV2()
     .then((result) => {
