--- a/scan.html
+++ b/scan.html
@@ -49,7 +49,7 @@ $(document).ready(function () {
         liff.scanCodeV2()
         .then((result) => {
           alert(result);
-          window.location.href(result);
+          //window.location.href(result);
         })
         .catch((err) => {
             console.log(err);
