--- a/scan.html
+++ b/scan.html
@@ -52,7 +52,7 @@ $(document).ready(function () {
           //window.location.href(result);
         })
         .catch((err) => {
-            console.log(err);
+            alert("error "+result);
         });
     })
     .catch((err) => {
