--- a/scan.html
+++ b/scan.html
@@ -37,14 +37,7 @@ $(document).ready(function () {
   //LIFFで立ち上げているかどうかの判定
   if(liff.isInClient()){
     pElement.innerHTML='読み込み中...'
-    
-    //LIFF初期化
-    liff.init({
-      liffId: liffId,
-      withLoginOnExternalBrowser: true, // Enable automatic login process
-    })
-    .then(()=>{
-        pElement.innerHTML=''
+          pElement.innerHTML=''
         //カメラ起動
         liff.scanCodeV2()
         .then((result) => {
@@ -53,7 +46,14 @@ $(document).ready(function () {
         })
         .catch((err) => {
             alert("error "+result);
-        });
+        });  
+    //LIFF初期化
+    liff.init({
+      liffId: liffId
+      //withLoginOnExternalBrowser: true, // Enable automatic login process
+    })
+    .then(()=>{
+
     })
     .catch((err) => {
       console.log('LIFF Initialization failed ', err);
