--- a/scan.html
+++ b/scan.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRcode reader5</title>
+    <title>QRcode reader6</title>
 </head>
 <body>
 <p id="liff-message"></p>
@@ -10,6 +10,7 @@
 <span id="area"></span>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
 <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script>
@@ -37,21 +38,14 @@ $(document).ready(function () {
         //カメラ起動
         liff.scanCodeV2()
         .then((result) => {
-          //alert(result);
           window.location.href(result);
         })
         .catch((err) => {
-            //alert("error "+result);
         });  
     })
     .catch((err) => {
       console.log('LIFF Initialization failed ', err);
     });
-    
-
-  }else{
-    //doument.body.innerHTML = 'LINEで開いてください'
-    //ajaxConnGet("aaaa")//テスト用
   }
   
       
