--- a/scan.html
+++ b/scan.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRcode reader10</title>
+    <title>QRcode reader11</title>
 </head>
 <body>
 <p id="liff-message"></p>
@@ -25,9 +25,9 @@ function initializeLiff(defaultLiffId) {
   .then(() => {
       liff.scanCodeV2().then(result => {
           const stringifiedResult = result.value;
-          liff.sendMessages([{
-              'type': 'text',
-              'text': stringifiedResult
+          liff.openWindow([{
+              external: true,
+              url: stringifiedResult
           }]).then(() => {
               liff.closeWindow();
           }).catch((error) => {
