--- a/scan.html
+++ b/scan.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRcode reader15</title>
+    <title>QRcode reader9</title>
 </head>
 <body>
 <p id="liff-message"></p>
@@ -12,32 +12,42 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
 <script>
-window.onload = function() {
-  const defaultLiffId = "1657763925-5yob2JPD";
-  initializeLiff(defaultLiffId);
-};
-  function openurl(url){
-    window.alert(url);
-  }
-function initializeLiff(defaultLiffId) {
-  liff
-  .init({
-      liffId: defaultLiffId
-  })
-  .then(() => {
-      liff.scanCodeV2().then(result => {
-          const stringifiedResult = result.value;
-          openurl(stringifiedResult);
-      }).catch(err => {
-          liff.closeWindow();
-      });
-  })
-  .catch((err) => {
-      window.alert('Something went wrong with LIFF initialization.');
-  });
-}
-    
+var lineId = ''
+var lineName = ''
+$(document).ready(function () {
+  const liffId = "1657763925-5yob2JPD";
+  var lineiId = "";            
+  const divPage = document.getElementById('liff-page');
+  
+  //p要素の取得
+  const pElement = document.getElementById('liff-message');
+            
+  //LIFFで立ち上げているかどうかの判定
+  if(liff.isInClient()){
+    pElement.innerHTML='読み込み中...'
 
+    //LIFF初期化
+    liff.init({
+      liffId: liffId
+      //withLoginOnExternalBrowser: true, // Enable automatic login process
+    })
+    .then(()=>{
+          pElement.innerHTML=''
+        //カメラ起動
+        liff.scanCodeV2()
+        .then((result) => {
+            pElement.innerHTML=result.value
+          liff.closeWindow();
+        })
+        .catch((err) => {
+            liff.closeWindow();
+        });  
+    })
+    .catch((err) => {
+      liff.closeWindow();
+    });
+  }
+})
 </script>
 
 </body>
