--- a/scan.html
+++ b/scan.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRcode reader9</title>
+    <title>QRcode reader10</title>
 </head>
 <body>
 <p id="liff-message"></p>
@@ -36,7 +36,7 @@ $(document).ready(function () {
         //カメラ起動
         liff.scanCodeV2()
         .then((result) => {
-            pElement.innerHTML=result.value
+          location.replace(result.value);
           liff.closeWindow();
         })
         .catch((err) => {
