--- a/scan.html
+++ b/scan.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRcode reader１</title>
+    <title>QRcode reader</title>
 </head>
 <body>
 <p id="liff-message"></p>
@@ -40,14 +40,13 @@ $(document).ready(function () {
         liff.scanCodeV2()
         .then((result) => {
           location = result.value;
-          liff.closeWindow();
         })
         .catch((err) => {
-            liff.closeWindow();
+
         });  
     })
     .catch((err) => {
-      liff.closeWindow();
+
     });
   }
 })
