--- a/scan.html
+++ b/scan.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRcode reader</title>
+    <title>QRcode reader2</title>
 </head>
 <body>
 <p id="liff-message"></p>
@@ -39,14 +39,17 @@ $(document).ready(function () {
         //カメラ起動
         liff.scanCodeV2()
         .then((result) => {
-          location = result.value;
+          reLink = result.value;
+          if(reLink!=''){
+              location=reLink;
+          }
         })
         .catch((err) => {
-
+            liff.closeWindow();
         });  
     })
     .catch((err) => {
-
+         liff.closeWindow();
     });
   }
 })
